Fixade bugg som tillät overflow till höger i post_info_container, förbättrade bläddrings-pilarnas positioner

--- a/static/css/album.css
+++ b/static/css/album.css
@@ -20,10 +20,11 @@
     color: white;
     text-shadow: 0 0 3px black;
     z-index: 1;
+    transform: translateX(-9px);
 }
 
 .slide_control>i{
-    font-size: 60px;
+    font-size: 50px;
 }
 
 .slide_control>i:hover{
@@ -32,6 +33,7 @@
 
 #slide_control_right{
     right: 0;
+    transform: translateX(9px);
 }
 
 .slide{
@@ -102,10 +104,10 @@
     max-width: 800px;
     margin: auto;
     padding: 0 30px;
+    overflow-x: hidden;
 }
 
 .post_text_description{
-    
     display: none;
 }
 
@@ -144,6 +146,7 @@
     font-size: 16px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 100;
+    line-height: 28px;
 }
 
 @media (min-width:768px){
